--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/gorilla/mux"
   version = "1.7.1"
+
+[[constraint]]
+  name = "github.com/urfave/negroni"
+  version = "1.0.0"
