--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,7 @@
 [[constraint]]
   name = "github.com/urfave/negroni"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/rs/cors"
+  version = "1.6.0"
